# USBFanHub

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .translation-status.md  CHANGELOG.md  CONTRIBUTING.md  FEATURE_ROADMAP.md  README.md
.github/: CODE_OF_CONDUCT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: README.md  ci.yml  firmware-build.yml  python-tests.yml  release.yml
docs/: rgb_control.md  usb_protocol.md
firmware/: CMakeLists.txt  README.md  build.sh
firmware/include/: config.h  pwm_control.h  rgb_control.h  tachometer.h  tusb_config.h  usb_hid.h
firmware/src/: main.c  pwm_control.c  rgb_control.c  tachometer.c  usb_descriptors.c  usb_hid.c  ws2812.pio
hardware/: BLOCK_DIAGRAM.md  README.md  pinout.md  schematic_suggestions.md
hardware/kicad/: QUICK_START.md  README.md  pico_fan_hub.kicad_pcb  pico_fan_hub.kicad_pro  pico_fan_hub.kicad_sch  pico_fan_hub_symbols.kicad_sym
software/driver/: .coveragerc  README.md  pytest.ini  requirements-test.txt  setup.py
software/driver/pico_fan_hub/: __init__.py  cli.py  daemon.py  device.py  hwmon.py
software/driver/tests/: __init__.py  conftest.py  test_cli.py  test_device.py
